--- a/storefront/app/views/themes/default/spree/page_sections/_header.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_header.html.erb
@@ -1,5 +1,5 @@
 <% layout = section.preferred_layout %>
-<% show_account_pane = !try_spree_current_user && canonical_path != spree_login_path && canonical_path != spree_signup_path && canonical_path != spree_forgot_password_path %>
+<% show_account_pane = !try_spree_current_user && (defined?(spree_login_path) && canonical_path != spree_login_path) && (defined?(spree_signup_path) && canonical_path != spree_signup_path) && (defined?(spree_forgot_password_path) && canonical_path != spree_forgot_password_path) %>
 <header
   class='sticky has-[.currency-and-locale-modal:not(.hidden)]:relative top-0 z-50 has-[.currency-and-locale-modal:not(.hidden)]:z-[unset] header-<%= layout %>'
   data-controller='header toggle-menu slideover <%= "slideover-account" if show_account_pane %>'
