Fix rendering Image With Text page section

--- a/storefront/app/views/themes/default/spree/page_sections/_image_with_text.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_image_with_text.html.erb
@@ -14,7 +14,7 @@
                 }.join(', ')
               %>
             <% else %>
-              <div class="w-full h-full object-cover bg-gray-100"></div>
+              <%= content_tag(:div, '', class: 'w-full h-full object-cover bg-gray-100') %>
             <% end %>
           <% end %>
         </div>
