Storefront: PDP page

--- a/storefront/app/views/themes/default/spree/page_sections/_featured_product.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_featured_product.html.erb
@@ -124,7 +124,7 @@
                 <% end %>
               <% end %>
             <% end %>
-            <%= render('spree/products/add_to_waitlist', variant: current_variant) if current_variant.present? %>
+            <%= render('spree/products/add_to_waitlist', variant: current_variant) if spree.respond_to?(:waitlist_path) && current_variant.present? %>
           </div>
         </div>
       </div>
