--- a/storefront/app/views/themes/default/spree/products/_show_more_button.html.erb
+++ b/storefront/app/views/themes/default/spree/products/_show_more_button.html.erb
@@ -1,5 +1,5 @@
-<% unless storefront_products.last? %>
-  <%= turbo_frame_tag "next_page", src: url_for(params.to_unsafe_h.merge(page: storefront_products.next_param, format: :turbo_stream)), class: "block relative w-full", data: { controller: "infinite-scroll", infinite_scroll_offset_value: "1350px" }, loading: "lazy" do %>
+<% unless storefront_products.last_page? %>
+  <%= turbo_frame_tag "next_page", src: url_for(params.to_unsafe_h.merge(page: storefront_products.next_page, format: :turbo_stream)), class: "block relative w-full", data: { controller: "infinite-scroll", infinite_scroll_offset_value: "1350px" }, loading: "lazy" do %>
     <span class="flex justify-center gap-2 items-center py-4 left-0 w-full h-full">
         <%= render 'spree/shared/icons/spinner' %>
       <%= Spree.t(:loading) %>...
