--- a/storefront/app/views/spree/checkout/edit.html.erb
+++ b/storefront/app/views/spree/checkout/edit.html.erb
@@ -51,7 +51,7 @@
         <div class="mt-3 border-t pt-3 flex justify-between items-center border-default">
           <div class="flex items-center">
             <div class="min-w-[60px] max-w-[60px]">
-              <%= Spree.t(:delivery_method) %>
+              <%= Spree.t('storefront.checkout.delivery_method') %>
             </div>
             <div class="px-5 flex flex-col gap-4">
               <% @order.shipments.each do |shipment| %>
