--- a/storefront/app/views/spree/checkout/_missing_line_items.html.erb
+++ b/storefront/app/views/spree/checkout/_missing_line_items.html.erb
@@ -5,25 +5,17 @@
         <div class="p-8">
           <h2 class="text-xl mb-4"><%= Spree.t('storefront.checkout.shipping_not_available') %></h2>
           <p class="mb-4">
-            <%= Spree.t('checkout.errors.invalid_line_items', count: @order.invalid_line_items.size) %>
+            <%= Spree.t('checkout.errors.invalid_line_items', count: @order.line_items_without_shipping_rates.size) %>
           </p>
 
           <div class="mb-5 overflow-y-auto pt-3 mx-3 lg:mx-8 lg:mt-4 lg:pt-6 line-items" data-checkout-summary-target="line_items">
-            <% if @order.vendors.any? || @order.splitted? %>
-              <% @order.invalid_line_items.each do |line_item| %>
-                <div class="mb-5">
-                  <%= render collection: line_items, partial: 'spree/checkout/line_item', cached: spree_base_cache_scope %>
-                </div>
-              <% end %>
-            <% else %>
-              <%= render collection: @order.invalid_line_items, partial: 'spree/checkout/line_item', cached: spree_base_cache_scope %>
-            <% end %>
+            <%= render collection: @order.line_items_without_shipping_rates, partial: 'spree/checkout/line_item', cached: spree_base_cache_scope %>
           </div>
 
           <div class="flex justify-end items-center flex-wrap mt-6">
             <%= link_to Spree.t('storefront.checkout.continue_to_cart'), spree.cart_path, class: 'mx-4 py-4', target: :_top %>
             <%= button_to Spree.t('storefront.checkout.continue_to_checkout'),
-                        spree.checkout_remove_missing_items_path(@order.token, line_item_ids: @order.invalid_line_items.map(&:id)),
+                        spree.checkout_remove_missing_items_path(@order.token, line_item_ids: @order.line_items_without_shipping_rates.map(&:id)),
                         class: 'btn-primary font-semibold checkout-content-save-continue-button my-5 ml-4 !py-4',
                         method: :delete,
                         data: { turbo: false, 'turbo-submits-with': (render 'spree/checkout/button_processing', is_hidden: false) }
