--- a/storefront/app/views/spree/checkout/update.turbo_stream.erb
+++ b/storefront/app/views/spree/checkout/update.turbo_stream.erb
@@ -9,14 +9,14 @@
 <%= turbo_stream.update 'summary-order-total' do %>
   <%= @order.display_total.to_html %>
 <% end %>
-<% if @order.invalid_line_items.any? && !@order.all_line_items_invalid? %>
+<% if @order.line_items_without_shipping_rates.any? && !@order.all_line_items_invalid? %>
   <%= turbo_stream.append :modal do %>
     <%= turbo_frame_tag :modal do %>
       <%= render partial: 'spree/checkout/missing_line_items' %>
     <% end %>
   <% end %>
 <% end %>
-<% if @order.invalid_line_items.any? && @order.all_line_items_invalid? %>
+<% if @order.line_items_without_shipping_rates.any? && @order.all_line_items_invalid? %>
   <%= turbo_stream.append :modal do %>
     <%= turbo_frame_tag :modal do %>
       <%= render partial: 'spree/checkout/missing_all_line_items' %>
