--- a/storefront/app/views/themes/default/spree/account/orders/show.html.erb
+++ b/storefront/app/views/themes/default/spree/account/orders/show.html.erb
@@ -17,6 +17,6 @@
     <h1 class="text-xl uppercase font-medium my-4 ">
       <%= accurate_title %>
     </h1>
-    <%= render 'spree/shared/order_details', order: @order %>
+    <%= render 'spree/shared/order_details', order: @order, shipments: @shipments %>
   </div>
 </div>
