--- a/storefront/app/views/themes/default/spree/shared/_order_details.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_order_details.html.erb
@@ -1,10 +1,12 @@
+<% shipments ||= order.shipments %>
+
 <% if order.order_refunded? || order.partially_refunded? %>
   <div class="alert-warning mb-5 py-2 px-3">
     <% if order.gift_card %>
-      <% key = "refund_action_required_message.order_#{@shipments.shipped_but_canceled.any? ? 'refunded' : 'canceled'}.#{order.partially_refunded? ? 'partially' : 'fully'}" %>
+      <% key = "refund_action_required_message.order_#{shipments.shipped_but_canceled.any? ? 'refunded' : 'canceled'}.#{order.partially_refunded? ? 'partially' : 'fully'}" %>
       <%= Spree.t(key, customer_support_email: order.store.customer_support_email ) %>
     <% else %>
-      <% key = "refund_action_not_required_message.order_#{@shipments.shipped_but_canceled.any? ? 'refunded' : 'canceled'}.#{order.partially_refunded? ? 'partially' : 'fully'}" %>
+      <% key = "refund_action_not_required_message.order_#{shipments.shipped_but_canceled.any? ? 'refunded' : 'canceled'}.#{order.partially_refunded? ? 'partially' : 'fully'}" %>
       <%= Spree.t(key) %>
     <% end %>
   </div>
@@ -14,10 +16,10 @@
   <%= Spree.t(:completed_at) %> <%= local_time(order.completed_at) %>
 </p>
 
-<%== color_options_style_for_line_items(@shipments.flat_map(&:line_items)) %>
+<%== color_options_style_for_line_items(shipments.flat_map(&:line_items)) %>
 
 <ul>
-  <%= render partial: 'spree/shared/order_shipment', collection: @shipments, as: :shipment, cached: spree_base_cache_scope %>
+  <%= render partial: 'spree/shared/order_shipment', collection: shipments, as: :shipment, cached: spree_base_cache_scope %>
 </ul>
 
 <div class="mt-6 bg-accent mb-24">
@@ -28,7 +30,7 @@
         <%= Spree.t(:billing_address) %>
       </div>
       <div class="!leading-[1.375rem] text-neutral-800">
-        <%= render 'spree/shared/address', address: @order.billing_address %>
+        <%= render 'spree/shared/address', address: order.billing_address %>
       </div>
     </div>
     <!-- payment into -->
@@ -37,7 +39,7 @@
         <%= Spree.t(:payment_information) %>
       </div>
       <div class="!leading-[1.375rem] text-neutral-800">
-        <%= render collection: @order.payments.valid, partial: 'spree/shared/payment', cached: spree_base_cache_scope %>
+        <%= render collection: order.payments.valid, partial: 'spree/shared/payment', cached: spree_base_cache_scope %>
       </div>
     </div>
   </div>
