--- a/storefront/app/views/spree/checkout/apply_coupon_code.turbo_stream.erb
+++ b/storefront/app/views/spree/checkout/apply_coupon_code.turbo_stream.erb
@@ -31,12 +31,14 @@
                             result: @result, classes: @result.error.present? ? 'error' : '' %>
 <% end %>
 
-<%= turbo_stream.replace :gift_card_code_field do %>
-  <%= turbo_frame_tag :gift_card_code_field do %>
-    <%= hidden_field_tag 'order[gift_card_code]', @order.gift_card&.code %>
-    <%= hidden_field_tag 'order[gift_card_amount]', @order.gift_card_total %>
+<% if @order.respond_to?(:gift_card) %>
+  <%= turbo_stream.replace :gift_card_code_field do %>
+    <%= turbo_frame_tag :gift_card_code_field do %>
+      <%= hidden_field_tag 'order[gift_card_code]', @order.gift_card&.code %>
+      <%= hidden_field_tag 'order[gift_card_amount]', @order.gift_card_total %>
+    <% end %>
   <% end %>
-<% end %>
+<% end%>
 
 <%= turbo_stream.replace :checkout_store_credit do %>
   <%= render 'store_credit' %>
