--- a/storefront/app/views/spree/checkout/payment/_store_credit.html.erb
+++ b/storefront/app/views/spree/checkout/payment/_store_credit.html.erb
@@ -1,7 +1,7 @@
 <% if @order.using_store_credit? %>
   <div class="d-flex flex-column mb-5" data-hook="checkout_payment_store_credit_success">
     <p class="store-credit-title font-body">
-      <% if @order.gift_card.present? %>
+      <% if @order.respond_to?(:gift_card) && @order.gift_card.present? %>
         <%= Spree.t(:gift_card_amount_applied, amount: @order.display_gift_card_total, code: @order.gift_card.code) %>
       <% else %>
         <%= Spree.t(:store_credits_amount_applied, amount: @order.display_total_applicable_store_credit.abs) %>
