--- a/storefront/app/views/spree/checkout/_payment_methods.html.erb
+++ b/storefront/app/views/spree/checkout/_payment_methods.html.erb
@@ -3,12 +3,12 @@
     <div class="d-flex flex-column mb-5">
       <p>
         <% if @order.respond_to?(:gift_card) && @order.gift_card.present? %>
-          <%= Spree.t(:gift_card_amount_applied, amount: @order.display_gift_card_total, code: @order.gift_card.code) %>
+          <%= Spree.t('storefront.checkout.gift_card_amount_applied', amount: @order.display_gift_card_total, code: @order.gift_card.code) %>
         <% else %>
-          <%= Spree.t(:store_credits_amount_applied, amount: @order.display_total_applicable_store_credit.abs) %>
+          <%= Spree.t('storefront.checkout.store_credits_amount_applied', amount: @order.display_total_applicable_store_credit.abs) %>
         <% end %>
 
-        <%= Spree.t(:order_already_paid) %>
+        <%= Spree.t('storefront.checkout.order_already_paid') %>
       </p>
     </div>
     <div class="flex justify-end w-full">
@@ -20,8 +20,8 @@
     <h5 class="mb-3 font-body font-semibold">
       <%= Spree.t(:payment) %>
     </h5>
-    <p class="text-muted mb-3">
-      <%= Spree.t(:all_transactions_are_secure_and_encrypted) %>
+    <p class="text-muted mb-3 text-neutral-600">
+      <%= Spree.t('storefront.checkout.all_transactions_are_secure_and_encrypted') %>
     </p>
 
     <%= render partial: 'spree/checkout/payment/store_credit' %>
@@ -55,7 +55,7 @@
   <% end %>
 
   <p class="text-xs mt-2 mb-4">
-    <%= Spree.t(:by_placing_this_order_you_agree_to) %>
+    <%= Spree.t('storefront.checkout.by_placing_this_order_you_agree_to') %>
     <%= link_to Spree.t(:terms_of_service), policy_path('terms_of_service'), target: :_blank, class: 'text-primary' %> and
     <%= link_to Spree.t(:privacy_policy), policy_path('privacy_policy'), target: :_blank, class: 'text-primary' %>
   </p>
