Checkout: Added nice Credit Card form

--- a/storefront/app/views/spree/checkout/edit.html.erb
+++ b/storefront/app/views/spree/checkout/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="checkout-progress" data-hook="checkout_progress" role="navigation" aria-label="<%= Spree.t('checkout_page.checkout_navigation') %>">
+<div class="checkout-progress" data-hook="checkout_progress" role="navigation">
   <nav aria-label="breadcrumb">
     <%= checkout_progress %>
   </nav>
