--- a/storefront/app/views/spree/checkout/payment/_gateway.html.erb
+++ b/storefront/app/views/spree/checkout/payment/_gateway.html.erb
@@ -44,7 +44,7 @@
       </div>
       <div class="form-group">
         <label for="card_code" class="block text-xs text-neutral-600 mb-1"><%= Spree.t(:cvv) %></label>
-        <%= password_field_tag "#{param_prefix}[verification_value]", '', 
+        <%= text_field_tag "#{param_prefix}[verification_value]", '', 
             options_hash.merge(
               id: 'card_code', 
               class: 'text-input', 
