clean up i18n translations for `core` and `admin`

--- a/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
@@ -3,7 +3,7 @@
     <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
       <span class="text-muted font-weight-normal">
         <%= Spree.t(:show) %>
-      </span> 
+      </span>
       <%= order_filter_dropdown_value %>
     </button>
     <div class="dropdown-menu dropdown-menu-right w-100" style="min-width: 200px">
@@ -20,7 +20,7 @@
       <%= link_to Spree.t('admin.orders.fulfilled'),
         params.to_unsafe_h.deep_merge({q: {shipment_state_eq: :shipped, shipment_state_not_in: '', state_eq: '', state_in: '', refunded: '', partially_refunded: ''}}),
         class: "dropdown-item #{'active' if params[:q][:shipment_state_eq] == 'shipped'}" %>
-        <%= link_to Spree.t('admin.orders.cancelled'),
+        <%= link_to Spree.t('admin.orders.canceled'),
         params.to_unsafe_h.deep_merge({q: {state_eq: nil, state_in: [:canceled, :partially_canceled], shipment_state_not_in: '', shipment_state_eq: '', refunded: '', partially_refunded: ''}}),
         class: "dropdown-item #{'active' if params[:q][:state_in] == ['canceled','partially_canceled']}" %>
       <%= link_to Spree.t('admin.orders.refunded'),
