--- a/storefront/app/views/themes/default/spree/orders/_summary.html.erb
+++ b/storefront/app/views/themes/default/spree/orders/_summary.html.erb
@@ -2,7 +2,7 @@
   <% if order.line_items.any? %>
     <div class="cart-summary-container p-4">
       <p class="text-center lg:text-right text-sm mb-3">
-        <%= Spree.t(:shipping_and_taxes_calculated_at_checkout) %>
+        <%= Spree.t('storefront.cart.shipping_and_taxes_calculated_at_checkout') %>
       </p>
 
       <div class="shopping-cart-total-text text-center lg:text-right uppercase font-medium">
