--- a/core/app/views/spree/addresses/_form.html.erb
+++ b/core/app/views/spree/addresses/_form.html.erb
@@ -45,7 +45,7 @@
     </div>
     <span class="text-sm space-x-2 items-center hidden alert alert-info mt-2 align-items-center" data-address-autocomplete-target="addressWarning">
       <%= heroicon "exclamation-circle", variant: :outline if defined?(heroicon) %>
-      <%= Spree.t(:add_house_number, scope: :address_book) %>
+      <%= Spree.t('address_book.add_house_number') %>
     </span>
   </div>
   <%= address_field(address_form, :address2, address_id) %>
