--- a/storefront/app/views/spree/checkout/_summary.html.erb
+++ b/storefront/app/views/spree/checkout/_summary.html.erb
@@ -53,7 +53,7 @@
           <% elsif order.state == 'address' %>
             <div class="flex justify-between items-center mb-2">
               <span><%= Spree.t(:shipping) %>:</span>
-              <span class="text-xs text-gray-500"><%= Spree.t(:calculated_at_next_step) %></span>
+              <span class="text-xs text-gray-500"><%= Spree.t('storefront.checkout.calculated_at_next_step') %></span>
             </div>
           <% end %>
 
