--- a/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
+++ b/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
@@ -16,8 +16,8 @@
         </div>
       <% else %>
         <div class="text-center py-6">
-          <p class="mb-2 font-medium uppercase"><%= Spree.t(:no_addresses_title) %></p>
-          <p><%= Spree.t(:no_addresses_description) %></p>
+          <p class="mb-2 font-medium uppercase"><%= Spree.t('storefront.account.no_addresses_title') %></p>
+          <p><%= Spree.t('storefront.account.no_addresses_description') %></p>
           <div class="flex mt-8 justify-center">
             <%= link_to Spree.t(:add), spree.new_address_path, class: 'btn-primary block' %>
           </div>
