--- a/storefront/app/views/themes/default/spree/account/orders/index.html.erb
+++ b/storefront/app/views/themes/default/spree/account/orders/index.html.erb
@@ -13,8 +13,8 @@
       <!-- add pagination -->
     <% else %>
       <div class="text-center my-16 lg:my14">
-        <p class="mb-2 font-medium uppercase"><%= Spree.t(:no_orders_title) %></p>
-        <p><%= Spree.t(:no_orders_description) %></p>
+        <p class="mb-2 font-medium uppercase"><%= Spree.t('storefront.account.no_orders_title') %></p>
+        <p><%= Spree.t('storefront.account.no_orders_description') %></p>
         <div class="flex justify-center mt-8">
           <%= link_to Spree.t(:shop_all), spree.root_url, class: 'btn-primary flex' %>
         </div>
