--- a/storefront/app/views/themes/default/spree/account/store_credits/index.html.erb
+++ b/storefront/app/views/themes/default/spree/account/store_credits/index.html.erb
@@ -9,7 +9,7 @@
       </div>
     </div>
     <% if @store_credit_events.any? %>
-      <p class="text-neutral-600 mb-3"><%= Spree.t(:store_credits_history) %></p>
+      <p class="text-neutral-600 mb-3"><%= Spree.t('storefront.account.store_credits_history') %></p>
 
       <table class="inline-table md:table table-auto overflow-scroll w-full text-sm border-separate border-spacing-y-4 mb-24 mt-4">
         <thead class="hidden md:table-row-group">
@@ -25,7 +25,7 @@
         </tbody>
       </table>
     <% else %>
-      <p class="text-neutral-600"><%= Spree.t(:no_store_credits) %></p>
+      <p class="text-neutral-600"><%= Spree.t('storefront.account.no_store_credits') %></p>
     <% end %>
   </div>
 </div>
