--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -46,3 +46,11 @@
 <%= javascript_importmap_tags 'application-spree-admin' %>
 
 <%= yield :head %>
+
+<% if Rails.env.test? %>
+  <style>
+    .text-uppercase {
+      text-transform: none !important;
+    }
+  </style>
+<% end %>
