--- a/storefront/app/views/themes/default/spree/page_sections/_newsletter.html.erb
+++ b/storefront/app/views/themes/default/spree/page_sections/_newsletter.html.erb
@@ -19,12 +19,14 @@
             <%= block.text.body %>
           </div>
         <% when 'Spree::PageBlocks::NewsletterForm' %>
-          <%= form_for :newsletter, url: spree.newsletter_subscribers_path, html: { class: "flex items-center flex-col md:flex-row w-full #{block_css_classes(block)}", **block_attributes(block) } do |f| %>
-            <div class='relative w-full lg:w-[424px] flex'>
-              <%= hidden_field_tag :section_id, section.id %>
-              <%= f.email_field :email, placeholder: block.preferred_placeholder, required: true, class: 'focus:border-primary focus:ring-primary pr-36 text-sm bg-accent rounded-input border-accent py-2 px-4 w-full relative z-30 !leading-[46px]' %>
-              <div class="absolute right-2 top-1/2 transform -translate-y-1/2 z-40">
-                <%= f.submit block.preferred_button_text.html_safe, class: "#{block.preferred_button_style == 'secondary' ? 'btn-secondary' : 'btn-primary'} content-center" %>
+          <%= form_for :newsletter, url: spree.newsletter_subscribers_path do |f| %>
+            <div class="flex items-center flex-col md:flex-row w-full <%= block_css_classes(block) %>" <%= block_attributes(block) %>>
+              <div class='relative w-full lg:w-[424px] flex'>
+                <%= hidden_field_tag :section_id, section.id %>
+                <%= f.email_field :email, placeholder: block.preferred_placeholder, required: true, class: 'focus:border-primary focus:ring-primary pr-36 text-sm bg-accent rounded-input border-accent py-2 px-4 w-full relative z-30 !leading-[46px]' %>
+                <div class="absolute right-2 top-1/2 transform -translate-y-1/2 z-40">
+                  <%= f.submit block.preferred_button_text.html_safe, class: "#{block.preferred_button_style == 'secondary' ? 'btn-secondary' : 'btn-primary'} content-center" %>
+                </div>
               </div>
             </div>
           <% end %>
