Draft returns management

--- a/admin/app/views/spree/admin/orders/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/edit.html.erb
@@ -8,6 +8,7 @@
       <%= render 'line_items' %>
       <%= render 'shipments' %>
       <%= render 'customer_returns' %>
+      <%= render 'return_authorizations' %>
       <%= render 'payments'%>
 
       <%= render 'body_custom' %>
